Fixed login-register page error messages not showing

--- a/frontend/desabafeAqui/src/app/pages/login-register/login-register.scss
+++ b/frontend/desabafeAqui/src/app/pages/login-register/login-register.scss
@@ -49,6 +49,7 @@
     justify-content: center;
     gap: 50px;
     height: 100%;
+    width: 80%;
     *{
         scale: 2;
     }
@@ -61,5 +62,8 @@ app-rounded-button{
 }
 
 .error-message{
+    text-align: center;
     color: red;
+    text-wrap: wrap;
+    width: 200px;
 }
